# QuineMcCluskey-Algorithm-Simulator

./: CMakeLists.txt  QuineMcCluskey.cpp  QuineMcCluskey.h  README.md  implicant.cpp  implicant.h  main.cpp  term.cpp  term.h
TestCases/: 0minterms and 0dont-cares.txt  All_Minterms_Case.txt  High Variable Number Case.txt  Maxterms Case.txt  Multiple_Solutions.txt  No Essential Prime Implicants Case.txt  Only Dont-Care terms Case.txt  Overlapping Terms Case.txt  Single Maxterm Case.txt  Single Variable and Single Minterm Case.txt
