cmake_minimum_required(VERSION 3.29)
project(dd1_s25_project1_outliers)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(dd1_s25_project1_outliers
    implicant.cpp
    implicant.h
    main.cpp
    QuineMcCluskey.cpp
    QuineMcCluskey.h
    term.cpp
    term.h
        QuineMcCluskey.cpp)
